🤖 fix: resolve FilePicker EXC_BAD_ACCESS crash on iOS
- Added essential permissions to Info.plist (NSPhotoLibraryUsageDescription, NSDocumentReadUsageDescription, etc.)
- Downgraded file_picker from 10.2.0 to 8.3.7 for better iOS 17 stability
- Enhanced error handling in pickFile() method with proper validation
- Improved copyP12ToAppDir() with safer file operations and verification
- Added withData: false flag to prevent immediate file loading issues
- Implemented comprehensive file validation and error reporting
- Added LSSupportsOpeningDocumentsInPlace and UIFileSharingEnabled for better file access
- Fixed potential memory access issues in FilePicker implementation

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,15 @@
 	<true/>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Esta aplicación necesita acceso a la galería de fotos para seleccionar certificados.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Esta aplicación necesita acceso a la cámara para tomar fotos de documentos.</string>
+	<key>NSDocumentReadUsageDescription</key>
+	<string>Esta aplicación necesita acceso a documentos para cargar certificados P12.</string>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
 </dict>
 </plist>
