--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   path_provider: ^2.1.5
   freezed_annotation: ^2.4.4
   intl: ^0.20.2
+  dio: ^5.7.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
