--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   intl: ^0.20.2
   dio: ^5.7.0
   url_launcher: ^6.3.1
+  shared_preferences: ^2.3.2
+  syncfusion_flutter_pdfviewer: ^28.1.35
 
 dev_dependencies:
   flutter_test:
