🤖 Improve TSA timestamp system with real-time data display
- Enhanced TSA error handling for 405 Method Not Allowed responses
- Implemented robust fallback system with retry logic across multiple TSA servers
- Added TimestampCapturingTSAClient to extract real timestamp information
- Pre-fetch timestamp data to display actual date/time from TSA server in PDF signature
- Improved signature appearance to show real TSA timestamp instead of placeholder
- Added comprehensive logging for TSA server debugging
- Removed problematic TSA servers from fallback list
- Enhanced resilience: signs without timestamp if TSA fails completely

Features:
- Real timestamp display in PDF signature (e.g., '2025-01-14 18:55:04 UTC')
- Automatic fallback between TSA servers (FreeTSA, DigiCert, Apple, etc.)
- Intelligent error categorization and retry logic
- Graceful degradation when timestamp services are unavailable

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,4 @@
-{"dart.flutterSdkPath": "/Users/angelgil/development/flutter"}
+{
+    "dart.flutterSdkPath": "/Users/angelgil/development/flutter",
+    "java.compile.nullAnalysis.mode": "automatic"
+}
