--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   url_launcher: ^6.3.1
   shared_preferences: ^2.3.2
   syncfusion_flutter_pdfviewer: ^28.1.35
+  share_plus: ^10.1.2
 
 dev_dependencies:
   flutter_test:
