--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   open_file: ^3.5.10
   path_provider: ^2.1.5
+  path: ^1.9.0
   freezed_annotation: ^2.4.4
   intl: ^0.20.2
   dio: ^5.7.0
